# wifi-speed

./: .gitattributes  .gitignore  README.md  config.example.yaml  pyproject.toml
scripts/: apply-settings.sh  install.sh  update.sh
src/wifi_speed/: __init__.py  cli.py  config.py  runner.py  settings.py  storage.py  web.py  wifi_signal.py
src/wifi_speed/templates/: dashboard.html
systemd/: wifi-speed-web.service  wifi-speed.service  wifi-speed.timer
