[project]
name = "wifi-speed"
version = "0.1.0"
description = "Periodic WiFi speed monitoring for Raspberry Pi Zero W"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
wifi-speed = "wifi_speed.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wifi_speed = ["templates/*.html"]
